# stremio-sub-addon

./: Cargo.toml  shell.nix
src/: handlers.rs  serverless.rs
